--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     <groupId>rs.ac.uns.ftn</groupId>
     <artifactId>PoslovnaInformatika</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <code>PoslovnaInformatika</code>
 
     <dependencies>
         <dependency>
@@ -43,6 +42,11 @@
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/src/main/resources/lib/mosquito-1.0.7.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>3.5.3</version>
         </dependency>
     </dependencies>
 
