--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
             <systemPath>${basedir}/src/main/resources/lib/mosquito-1.0.7.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>jasperreports</groupId>
+            <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>3.5.3</version>
+            <version>5.6.0</version>
         </dependency>
     </dependencies>
 
