--- a/src/main/resources/DBConnection.properties
+++ b/src/main/resources/DBConnection.properties
@@ -1,4 +1,4 @@
 driver = net.sourceforge.jtds.jdbc.Driver
-url = jdbc:jtds:sqlserver://localhost:1433/PoslovnaInformatika
+url = jdbc:jtds:sqlserver://localhost:1433/Mt102Test
 username = sa
 password = root
